--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0"
+        "spatie/laravel-ignition": "^2.0",
+        "symplify/easy-coding-standard": "^12.1"
     },
     "autoload": {
         "psr-4": {
@@ -45,6 +46,12 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "cs": [
+            "@php vendor/bin/ecs check --ansi"
+        ],
+        "cs-fix": [
+            "@php vendor/bin/ecs check --fix"
         ]
     },
     "extra": {
