--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.1",
         "spatie/laravel-ignition": "^2.0",
-        "symplify/easy-coding-standard": "^12.1"
+        "symplify/easy-coding-standard": "^12.1",
+        "larastan/larastan": "^2.0"
     },
     "autoload": {
         "psr-4": {
@@ -52,6 +53,9 @@
         ],
         "cs-fix": [
             "@php vendor/bin/ecs check --fix"
+        ],
+        "larastan": [
+            "@php vendor/bin/phpstan analyse"
         ]
     },
     "extra": {
